--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "background_color": "#12b188",
   "display": "standalone",
   "scope": ".",
-  "start_url": "./",
+  "start_url": "./#mode=standalone",
   "name": "安心出行",
   "short_name": "安心出行",
   "icons": [
