--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "back-home-safe",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://rocjjlpovw.github.io/back-home-safe",
+  "homepage": "https://codogo-b.gitlab.io/back-home-safe",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
