--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "homepage": "https://codogo-b.gitlab.io/back-home-safe",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "body-scroll-lock": "^3.1.5",
     "pickerjs": "^1.2.1",
     "react": "^17.0.1",
@@ -22,13 +19,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -45,7 +40,6 @@
   },
   "devDependencies": {
     "@types/body-scroll-lock": "^2.6.1",
-    "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
