--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://codogo-b.gitlab.io/back-home-safe",
   "dependencies": {
     "body-scroll-lock": "^3.1.5",
+    "jsqr": "^1.3.1",
     "pickerjs": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -12,7 +13,6 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "react-webcam-qr-scanner": "^1.0.8",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.5"
   },
