--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "styled-components": "^5.2.1",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "webrtc-adapter": "^7.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
