--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "homepage": "https://codogo-b.gitlab.io/back-home-safe",
   "dependencies": {
+    "@types/ramda": "^0.27.38",
     "body-scroll-lock": "^3.1.5",
     "jsqr": "^1.3.1",
     "pickerjs": "^1.2.1",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
