--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pickerjs": "^1.2.1",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
     "react-router": "^5.2.0",
