--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://codogo-b.gitlab.io/back-home-safe",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@types/ramda": "^0.27.38",
     "body-scroll-lock": "^3.1.5",
     "jsqr": "^1.3.1",
