--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.11.3",
     "@types/ramda": "^0.27.38",
     "body-scroll-lock": "^3.1.5",
+    "dayjs": "^1.10.4",
     "jsqr": "^1.3.1",
     "pickerjs": "^1.2.1",
     "ramda": "^0.27.1",
