--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@types/ramda": "^0.27.38",
     "body-scroll-lock": "^3.1.5",
     "dayjs": "^1.10.4",
+    "js-md5": "^0.7.3",
+    "js-sha256": "^0.9.0",
     "jsqr": "^1.3.1",
     "pickerjs": "^1.2.1",
     "ramda": "^0.27.1",
