--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "back-home-safe",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "repository": "gitlab:codogo-b/back-home-safe",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
