--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@types/ramda": "^0.27.38",
     "body-scroll-lock": "^3.1.5",
     "dayjs": "^1.10.4",
+    "i": "^0.3.6",
     "js-md5": "^0.7.3",
     "js-sha256": "^0.9.0",
     "jsqr": "^1.3.1",
+    "npm": "^7.5.4",
     "pickerjs": "^1.2.1",
+    "qrcode-with-logos": "^1.0.3",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-autosize-textarea": "^7.1.0",
@@ -21,6 +24,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-use": "^17.1.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.5",
     "webrtc-adapter": "^7.7.0"
