--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://codogo-b.gitlab.io/back-home-safe",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@types/ramda": "^0.27.38",
     "body-scroll-lock": "^3.1.5",
     "dayjs": "^1.10.4",
