--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://codogo-b.gitlab.io/back-home-safe",
   "dependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@types/ramda": "^0.27.38",
@@ -35,7 +37,8 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "lint:js": "eslint .",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "commitmsg": "commitlint -E $GIT_PARAMS"
   },
   "eslintConfig": {
     "extends": [
@@ -69,6 +72,7 @@
   },
   "husky": {
     "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "lint-staged && npm run tsc"
     }
   },
