--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-modal": "^3.12.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.2",
     "react-use": "^17.1.1",
     "styled-components": "^5.2.1",
@@ -63,6 +64,7 @@
     "@types/react-modal": "^3.12.0",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-router-transition": "^2.1.0",
     "@types/styled-components": "^5.1.7",
     "husky": "^5.0.9",
     "lint-staged": "^10.5.4",
