--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "body-scroll-lock": "^3.1.5",
+    "constate": "^3.1.0",
     "dayjs": "^1.10.4",
     "js-sha256": "^0.9.0",
     "jsqr": "^1.3.1",
