--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "homepage": "./",
   "repository": "gitlab:codogo-b/back-home-safe",
   "dependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
+    "@commitlint/cli": "^12.0.0",
+    "@commitlint/config-conventional": "^12.0.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "constate": "^3.1.0",
@@ -24,10 +24,10 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-transition": "^2.1.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "4.0.3",
     "react-use": "^17.1.1",
     "styled-components": "^5.2.1",
-    "typescript": "^4.1.5",
+    "typescript": "^4.2.2",
     "webrtc-adapter": "^7.7.0"
   },
   "scripts": {
@@ -37,7 +37,8 @@
     "eject": "react-scripts eject",
     "lint:js": "eslint .",
     "tsc": "tsc",
-    "commitmsg": "commitlint -E $GIT_PARAMS"
+    "commitmsg": "commitlint -E $GIT_PARAMS",
+    "postinstall": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -57,7 +58,7 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^14.14.28",
+    "@types/node": "^14.14.31",
     "@types/ramda": "^0.27.38",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
@@ -66,7 +67,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/react-router-transition": "^2.1.0",
     "@types/styled-components": "^5.1.7",
-    "husky": "^5.0.9",
+    "husky": "^5.1.1",
     "lint-staged": "^10.5.4",
     "precompress": "^6.3.2",
     "prettier": "^2.2.1"
