--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "eject": "react-scripts eject",
     "lint:js": "eslint .",
     "tsc": "tsc",
-    "commitmsg": "commitlint -E $GIT_PARAMS",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "pre-commit": "lint-staged && npm run tsc"
   },
   "eslintConfig": {
     "extends": [
