--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "eject": "react-scripts eject",
     "lint:js": "eslint .",
     "tsc": "tsc",
-    "postinstall": "husky install",
-    "pre-commit": "lint-staged && npm run tsc"
+    "postinstall": "husky install"
   },
   "eslintConfig": {
     "extends": [
