--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "homepage": "./",
   "repository": "gitlab:codogo-b/back-home-safe",
   "dependencies": {
-    "@commitlint/cli": "^12.0.0",
-    "@commitlint/config-conventional": "^12.0.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "constate": "^3.1.0",
     "dayjs": "^1.10.4",
+    "delete-all-cookies": "^0.3.0",
     "js-sha256": "^0.9.0",
     "jsqr": "^1.3.1",
     "pickerjs": "^1.2.1",
@@ -57,6 +56,8 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.0.0",
+    "@commitlint/config-conventional": "^12.0.0",
     "@types/node": "^14.14.31",
     "@types/ramda": "^0.27.38",
     "@types/react": "^17.0.2",
