--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "constate": "^3.1.0",
     "dayjs": "^1.10.4",
     "delete-all-cookies": "^0.3.0",
