--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "constate": "^3.1.0",
+    "crypto-js": "^4.0.0",
     "dayjs": "^1.10.4",
     "delete-all-cookies": "^0.3.0",
-    "js-sha256": "^0.9.0",
     "jsqr": "^1.3.1",
     "pickerjs": "^1.2.1",
     "qrcode-with-logos": "^1.0.3",
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.0.0",
     "@commitlint/config-conventional": "^12.0.0",
+    "@types/crypto-js": "^4.0.1",
     "@types/node": "^14.14.31",
     "@types/ramda": "^0.27.38",
     "@types/react": "^17.0.2",
