--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "eject": "react-scripts eject",
     "lint:js": "eslint .",
     "tsc": "tsc",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "release": "standard-version --message 'chore(release): %s\n\n[skip ci]' --no-verify"
   },
   "eslintConfig": {
     "extends": [
@@ -72,6 +73,7 @@
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "precompress": "^6.3.2",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "standard-version": "^9.2.0"
   }
 }
