--- a/package.json
+++ b/package.json
@@ -71,6 +71,10 @@
     "@types/react-router-transition": "^2.1.0",
     "@types/styled-components": "^5.1.9",
     "husky": "^6.0.0",
+    "import-sort-cli": "^6.0.0",
+    "import-sort-parser-babylon": "^6.0.0",
+    "import-sort-parser-typescript": "^6.0.0",
+    "import-sort-style-module": "^6.0.0",
     "lint-staged": "^10.5.4",
     "precompress": "^6.3.2",
     "prettier": "^2.2.1",
