--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,10 +27,11 @@ pages:
     - cd back-home-safe
     - npm ci
   only:
+    refs:
+      - master
     variables:
       - $GIT_LAB_USERNAME != null
       - $PERSONAL_ACCESS_TOKEN != null
-      - $CI_COMMIT_BRANCH == 'master'
   environment:
     name: production
   script:
