--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "crypto-js": "^4.0.0",
     "dayjs": "^1.10.4",
     "delete-all-cookies": "^0.3.0",
+    "i18next": "^20.2.1",
     "jsqr": "^1.3.1",
     "pickerjs": "^1.2.1",
     "qrcode-with-logos": "^1.0.3",
@@ -20,6 +21,7 @@
     "react-autosize-textarea": "^7.1.0",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.8.13",
     "react-modal": "^3.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
