ci: update build script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: node:latest
 stages:
   - test
   - deploy
+  - release
 
 "Test":
   stage: test
@@ -40,7 +41,6 @@ pages:
     - |-
       if [[ $GIT_LAB_USERNAME != null ]]; then
           npm run release
-          git push http://${GIT_LAB_USERNAME}:${PERSONAL_ACCESS_TOKEN}@gitlab.com/codogo-b/back-home-safe.git --verbose --no-verify --follow-tags HEAD:master
           npm run build
           rm -rf ../public
           mv ./build ../public
@@ -50,3 +50,26 @@ pages:
         rm -rf ./public
         mv ./build ./public
       fi
+
+release:
+  stage: release
+  allow_failure: false
+  only:
+    refs:
+      - master
+    variables:
+      - $GIT_LAB_USERNAME == null
+      - $PERSONAL_ACCESS_TOKEN == null
+
+  before_script:
+    - git config --global user.email "bot@_.com"
+    - git config --global user.name "Auto Bot"
+    - git clone http://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/codogo-b/back-home-safe.git &> /dev/null
+    - git checkout -qf master
+    - cd back-home-safe
+    - npm ci
+  environment:
+    name: production
+  script:
+    - npm run release
+    - git push http://${GIT_LAB_USERNAME}:${PERSONAL_ACCESS_TOKEN}@gitlab.com/codogo-b/back-home-safe.git --verbose --no-verify --follow-tags HEAD:master
