--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "react-modal": "^3.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.1",
     "react-use": "^17.2.4",
     "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
