--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-use": "^17.2.4",
     "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
+    "uuid": "^3.4.0",
     "webrtc-adapter": "^7.7.1"
   },
   "scripts": {
@@ -72,6 +73,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/react-router-transition": "^2.1.0",
     "@types/styled-components": "^5.1.9",
+    "@types/uuid": "^8.3.0",
     "husky": "^6.0.0",
     "import-sort-cli": "^6.0.0",
     "import-sort-parser-babylon": "^6.0.0",
