--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "./",
   "repository": "gitlab:codogo-b/back-home-safe",
   "dependencies": {
+    "@brainhubeu/react-carousel": "^2.0.3",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "4.0.0-alpha.58",
@@ -63,6 +64,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@types/brainhubeu__react-carousel": "^2.0.2",
     "@types/crypto-js": "^4.0.1",
     "@types/node": "^15.3.0",
     "@types/ramda": "^0.27.40",
