--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto-js": "^4.0.0",
     "dayjs": "^1.10.4",
     "delete-all-cookies": "^0.3.0",
+    "ec-key": "^0.0.4",
     "i18next": "^20.2.3",
     "jsqr": "^1.4.0",
     "pickerjs": "^1.2.1",
