--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.8.15",
+    "react-json-view": "^1.21.3",
     "react-modal": "^3.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
