--- a/package.json
+++ b/package.json
@@ -37,10 +37,9 @@
     "webrtc-adapter": "^8.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "postbuild": "precompress build",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "build": "vite build",
+    "postbuild": "precompress dist",
     "lint:js": "eslint .",
     "tsc": "tsc",
     "postinstall": "husky install",
@@ -78,6 +77,7 @@
     "@types/react-router-transition": "^2.1.1",
     "@types/styled-components": "^5.1.14",
     "@types/uuid": "^8.3.1",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "husky": "^7.0.2",
     "import-sort-cli": "^6.0.0",
     "import-sort-parser-babylon": "^6.0.0",
@@ -86,6 +86,7 @@
     "lint-staged": "^11.1.2",
     "precompress": "^6.3.2",
     "prettier": "^2.3.2",
-    "standard-version": "^9.3.1"
+    "standard-version": "^9.3.1",
+    "vite": "^2.5.3"
   }
 }
